Added villager to api by defining in yml and writing endpoint functions
